# Brayns

./: .clang-format  .clang-tidy  .gitexternals  .github_changelog_generator  .gitignore  .gitlab-ci.hpc-spack.yml  .gitlab-ci.viz.yml  .gitlab-ci.yml  .gitmodules  .gitreview  .gitsubprojects  .lsan_suppressions.txt  .readthedocs.yaml  .travis.yml  ACKNOWLEDGMENTS.txt  AUTHORS.txt  CMakeLists.txt  CMakePresets.json  Changelog.md  DOCKER.md  Dockerfile  GCLOUD.md  LICENSE.txt  README.md  anothertest.txt  build_nix.sh  docker-compose.yml  onceagain  slack_notifications_test  test2.txt
apps/: CMakeLists.txt  braynsService.cpp  service.cpp
apps/BRaynsService/: BraynsService.cpp  BraynsService.h  CMakeLists.txt  main.cpp
apps/BRaynsViewer/: BraynsViewer.cpp  BraynsViewer.h  CMakeLists.txt  main.cpp
apps/BraynsBenchmark/: CMakeLists.txt  main.cpp
apps/BraynsHealthcheck/: CMakeLists.txt  main.cpp
apps/BraynsIBL/: CMakeLists.txt  ShaderIncludeTemplate.h.in  brdf.fs  equirectangular_to_cubemap.fs  irradiance_convolution.fs  main.cpp  prefilter.fs  shader.h
apps/BraynsRunner/: CMakeLists.txt  main.cpp
apps/BraynsService/: CMakeLists.txt  main.cpp
apps/BraynsViewer/: BraynsViewer.cpp  BraynsViewer.h  CMakeLists.txt  main.cpp
apps/JSBRaynsViewer/: .bowerrc  .brackets.json  Gruntfile.js  README.md  bower.json  karma.conf.js  package.json
apps/ui/: Application.cpp  Application.h  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  Viewport.cpp  Viewport.h
brayns/: Brayns-config.cmake  Brayns.cpp  Brayns.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  EngineFactory.cpp  EngineFactory.h  PluginAPI.h  PluginManager.cpp  PluginManager.h  Version.h.in  brayns-config.cmake
brayns/common/: ActionInterface.h  ActionMessage.h  BaseObject.cpp  BaseObject.h  BinaryParser.h  Blob.h  Bounds.cpp  Bounds.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  ColorRamp.cpp  ColorRamp.h  ColorTools.cpp  ColorTools.h  DefaultMaterialIds.h  FPSCounter.cpp  FPSCounter.h  GlmParsers.h  IDFactory.h  ImageManager.cpp  ImageManager.h  Log.cpp  Log.h  MaterialsColorMap.h  MathTypes.h  ModifiedFlag.h  PixelFormat.h  Progress.cpp  Progress.h  PropertyMap.cpp  PropertyMap.h  PropertyObject.cpp  PropertyObject.h  Statistics.cpp  Statistics.h  TextureType.h  Timer.cpp  Timer.h  TokenParser.h  (+14 more)
brayns/engine/: BrickedVolume.h  CMakeLists.txt  Camera.cpp  Camera.h  DefaultEngineObjects.cpp  DefaultEngineObjects.h  Engine.cpp  Engine.h  EngineFactory.cpp  EngineFactory.h  EngineObject.cpp  EngineObject.h  EngineObjectFactory.h  EngineObjectRegisterer.cpp  EngineObjectRegisterer.h  FrameBuffer.cpp  FrameBuffer.h  FrameExporter.cpp  FrameExporter.h  FrameRenderer.cpp  FrameRenderer.h  Framebuffer.cpp  Framebuffer.h  Geometry.cpp  Geometry.h  GeometryObject.cpp  GeometryObject.h  ImageOperation.h  InspectContext.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelAction.h  ModelComponents.cpp  ModelComponents.h  (+16 more)
brayns/engineapi/: BrickedVolume.h  CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  FrameBuffer.cpp  LightManager.h  Material.cpp  Material.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SharedDataVolume.h  Volume.cpp  Volume.h
brayns/io/: ArchiveLoader.cpp  ArchiveLoader.h  CMakeLists.txt  CircuitLoader.cpp  CircuitLoader.h  ColorMapLoader.cpp  ColorMapLoader.h  ConnectivityLoader.cpp  ConnectivityLoader.h  EmptyLoaderParams.h  ILoader.h  ImageManager.cpp  ImageManager.h  LoadParameters.h  Loader.cpp  Loader.h  LoaderFormat.cpp  LoaderFormat.h  LoaderInfo.h  LoaderRegistry.cpp  LoaderRegistry.h  MatrixLoader.cpp  MatrixLoader.h  MeshLoader.cpp  MeshLoader.h  MeshLoaderParameters.h  MolecularSystemReader.cpp  MolecularSystemReader.h  MorphologyLoader.cpp  MorphologyLoader.h  NESTLoader.cpp  NESTLoader.h  ProgressReporter.h  ProteinLoader.cpp  ProteinLoader.h  ProteinLoaderParameters.h  RawVolumeLoaderParameters.h  SceneLoader.cpp  SceneLoader.h  TextureLoader.cpp  (+8 more)
brayns/json/: CMakeLists.txt  Json.cpp  Json.h  JsonAdapter.h  JsonAdapterMacro.h  JsonBuffer.h  JsonError.cpp  JsonError.h  JsonErrors.cpp  JsonErrors.h  JsonExtractor.cpp  JsonExtractor.h  JsonObjectInfo.cpp  JsonObjectInfo.h  JsonObjectMacro.h  JsonOptions.cpp  JsonOptions.h  JsonSchema.cpp  JsonSchema.h  JsonSchemaValidator.cpp  JsonSchemaValidator.h  JsonType.cpp  JsonType.h  JsonTypes.cpp  JsonTypes.h  JsonValidator.cpp  JsonValidator.h  JsonValidators.cpp  JsonValidators.h  Message.h  MessageAdapter.h
brayns/kernels/: CMakeLists.txt
brayns/manipulators/: AbstractManipulator.cpp  AbstractManipulator.h  CMakeLists.txt  FlyingModeManipulator.cpp  FlyingModeManipulator.h  InspectCenterManipulator.cpp  InspectCenterManipulator.h
brayns/network/: BaseEntryPoint.h  BasicEntryPoint.h  CMakeLists.txt  ClientInterface.h  EntryPoint.h  IEntryPoint.h  INetworkInterface.h  Json.h  Message.h  MessageFactory.h  NetworkInterface.h  NetworkManager.cpp  NetworkManager.h  NetworkMonitor.cpp  NetworkMonitor.h  NetworkRequest.h  NetworkSocket.h  ServerInterface.h
brayns/parameters/: AbstractParameters.cpp  AbstractParameters.h  AnimationParameters.cpp  AnimationParameters.h  CMakeLists.txt  (+18 more)
ospray_modules/: CMakeLists.txt
plugins/: CMakeLists.txt
python/: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  build_doc.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_rtd.txt  setup.cfg  setup.py  tox.ini
src/: CMakeLists.txt
tests/: CMakeLists.txt  ClientServer.h  ImageValidator.h  PDiffHelpers.h  TestCase.h  TestParsing.cpp  TestString.cpp  addModel.cpp  addModelFromBlob.cpp  background.cpp  binary.cpp  brayns.cpp  braynsTestData.cpp  clipPlaneRendering.cpp  clipPlanes.cpp  clipping.cpp  demoOptiX.cpp  doctest.h  images.cpp  json.cpp  lights.cpp  materials.cpp  model.cpp  monkey.xyz  myPlugin.cpp  parsing.cpp  paths.h.in  plugin.cpp  propertyMap.cpp  renderer.cpp  sdfBeziers.cpp  sdfGeometries.cpp  shadows.cpp  snapshot.cpp  streamlines.cpp  string.cpp  strings.cpp  subsampling.cpp  testImages.cpp  test_clipping.cpp  (+6 more)
(+6293 files in other folders)
