[metadata]
version = 1.0.0
name = brayns
summary = Brayns python API
home-page = https://github.com/BlueBrain/Brayns
author = Daniel Nachbaur
author-email = bbp-open-source@googlegroups.com
license = LGPLv3
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = brayns, raytracing, bbp, BlueBrain

[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D203,D212,D400,D401

[coverage:report]
show_missing = True
