[metadata]
version = 1.2.0
name = brayns
summary = Brayns python API
home_page = https://github.com/BlueBrain/Brayns
author = Adrien Fleury
author_email = bbp-open-source@googlegroups.com
license = LGPLv3
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = brayns, raytracing, bbp, BlueBrain
