[metadata]
name = brayns
version = 3.6.0
url = https://github.com/BlueBrain/Brayns
download_url = https://github.com/BlueBrain/Brayns
project_urls =
    Tracker = https://bbpteam.epfl.ch/project/issues/projects/BRAYNS/issues
    Source = https://github.com/BlueBrain/Brayns
author = Blue Brain Project
author_email = bbp-open-source@googlegroups.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
license = LGPLv3
description = Brayns Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = brayns, raytracing, bbp, BlueBrain

[options]
packages = find:
install_requires = websockets
home_page = https://github.com/BlueBrain/Brayns
python_requires = >=3.9

[options.packages.find]
include = brayns*
